--- a/README.textile
+++ b/README.textile
@@ -1,3 +1,7 @@
+h2. Info
+Modified README from https://github.com/robbyrussell/oh-my-zsh/blob/master/README.textile
+
+
 A handful of functions, auto-complete helpers, and stuff that makes you shout...
 
 bq. "OH MY ZSHELL!"
